[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cryostar"
version = "0.1.0"
description = "CryoSTAR heterogeneous reconstruction framework"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [
  { name = "Yi Zhou" },
  { name = "Jing Yuan" },
  { name = "Yilai Li" }
]
dependencies = []

[project.urls]
Homepage = "https://bytedance.github.io/cryostar/"
Documentation = "https://byte-research.gitbook.io/cryostar/"


